2006-11-05  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/instrument-name-engraver.cc: 
	* input/regression/instrument-name-dynamic.ly: 
	ignore dynamic and pedal line spanners.

	* Documentation/topdocs/NEWS.tely: 
	* Documentation/user/advanced-notation.itely: 
	* THANKS: 
	* input/regression/balloon.ly: 
	* lily/balloon.cc: 
	* ly/music-functions-init.ly: 
	* scm/define-event-classes.scm: 
	* scm/define-grobs.scm: 
	* scm/define-music-properties.scm: 
	* scm/define-music-types.scm: 
	* scm/output-lib.scm: 
	* lily/balloon-engraver.cc: 
	rewrite balloon-text support. This is now a separate grob, with itsvictim as the parent. This involves addingBalloon_engraver, AnnotateOutputEvent, annotate-output-event,\balloonText, \balloonGrobText, and modifying Balloon_interface::print.

	* lily/paper-score.cc: 
	remove progress again

	* lily/chord-name-engraver.cc: 
	formatting nitpicks.

	* lily/paper-score.cc: 
	some useless statistics.

	* buildscripts/git-update-changelog.py: 
	update todo/done after rejection due to removal analysis.

	* buildscripts/git-update-changelog.py: 
	check whether removals from a diff actually apply.

2006-11-05  Joe Neeman  <joeneeman@gmail.com>

	* lily/include/page-turn-page-breaking.hh: remove unused
	fields in Break_node

	* lily/page-turn-page-breaking.cc (calc_demerits): 
	* lily/optimal-page-breaking.cc (try_page_spacing): remove
	uniformity penalties.

2006-11-05  Werner Lemberg  <wl@gnu.org>

	* Documentation/user/changing-defaults.itely,
	Documentation/user/preface.itely: Use `--', not `---'.
	Minor improvements.

	* Documentation/user/introduction.itely: Minor improvements.
	(Automated engraving): Make example using \applyOutput work
	actually.

	* input/regression/apply-output.ly: Improve.

2006-11-05  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/dynamic-engraver.cc: 
	formatting cleanup

	* input/regression/note-head-harmonic.ly: 
	* lily/stem.cc: 
	* input/regression/note-head-harmonic-whole.ly: 